Fix overflow-x

--- a/PlanIt/src/assets/cmps/BoardList.scss
+++ b/PlanIt/src/assets/cmps/BoardList.scss
@@ -1,13 +1,20 @@
+.board-container {
+    height: calc(100vh - 200px);
+    overflow-x: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .board-list {
     display: flex;
     gap: 16px;
     padding: 20px;
     overflow-x: auto;
     align-items: flex-start;
-    padding: 16px;
     margin-top: 100px;
+    flex-wrap: nowrap;
 }
-
 .board-card {
     border-radius: 6px;
     padding: 16px;
